src/bindings.rs

extern "C" {
    pub fn iauAtoi13(
        type_: *const ::std::os::raw::c_char,
        ob1: f64,
        ob2: f64,
        utc1: f64,
        utc2: f64,
        dut1: f64,
        elong: f64,
        phi: f64,
        hm: f64,
        xp: f64,
        yp: f64,
        phpa: f64,
        tc: f64,
        rh: f64,
        wl: f64,
        ri: *mut f64,
        di: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauAtoiq(
        type_: *const ::std::os::raw::c_char,
        ob1: f64,
        ob2: f64,
        astrom: *mut iauASTROM,
        ri: *mut f64,
        di: *mut f64,
    );
}
extern "C" {
    pub fn iauLd(bm: f64, p: *mut f64, q: *mut f64, e: *mut f64, em: f64, dlim: f64, p1: *mut f64);
}
extern "C" {
    pub fn iauLdn(
        n: ::std::os::raw::c_int,
        b: *mut iauLDBODY,
        ob: *mut f64,
        sc: *mut f64,
        sn: *mut f64,
    );
}
extern "C" {
    pub fn iauLdsun(p: *mut f64, e: *mut f64, em: f64, p1: *mut f64);
}
extern "C" {
    pub fn iauPmpx(
        rc: f64,
        dc: f64,
        pr: f64,
        pd: f64,
        px: f64,
        rv: f64,
        pmt: f64,
        pob: *mut f64,
        pco: *mut f64,
    );
}
extern "C" {
    pub fn iauPmsafe(
        ra1: f64,
        dec1: f64,
        pmr1: f64,
        pmd1: f64,
        px1: f64,
        rv1: f64,
        ep1a: f64,
        ep1b: f64,
        ep2a: f64,
        ep2b: f64,
        ra2: *mut f64,
        dec2: *mut f64,
        pmr2: *mut f64,
        pmd2: *mut f64,
        px2: *mut f64,
        rv2: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauPvtob(
        elong: f64,
        phi: f64,
        height: f64,
        xp: f64,
        yp: f64,
        sp: f64,
        theta: f64,
        pv: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauRefco(phpa: f64, tc: f64, rh: f64, wl: f64, refa: *mut f64, refb: *mut f64);
}
extern "C" {
    pub fn iauEpv00(
        date1: f64,
        date2: f64,
        pvh: *mut [f64; 3usize],
        pvb: *mut [f64; 3usize],
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauPlan94(
        date1: f64,
        date2: f64,
        np: ::std::os::raw::c_int,
        pv: *mut [f64; 3usize],
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn iauFad03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFae03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFaf03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFaju03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFal03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFalp03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFama03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFame03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFane03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFaom03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFapa03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFasa03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFaur03(t: f64) -> f64;
}
extern "C" {
    pub fn iauFave03(t: f64) -> f64;
}
extern "C" {
    pub fn iauBi00(dpsibi: *mut f64, depsbi: *mut f64, dra: *mut f64);
}
extern "C" {
    pub fn iauBp00(
        date1: f64,
        date2: f64,
        rb: *mut [f64; 3usize],
        rp: *mut [f64; 3usize],
        rbp: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauBp06(
        date1: f64,
        date2: f64,
        rb: *mut [f64; 3usize],
        rp: *mut [f64; 3usize],
        rbp: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauBpn2xy(rbpn: *mut [f64; 3usize], x: *mut f64, y: *mut f64);
}
extern "C" {
    pub fn iauC2i00a(date1: f64, date2: f64, rc2i: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauC2i00b(date1: f64, date2: f64, rc2i: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauC2i06a(date1: f64, date2: f64, rc2i: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauC2ibpn(date1: f64, date2: f64, rbpn: *mut [f64; 3usize], rc2i: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauC2ixy(date1: f64, date2: f64, x: f64, y: f64, rc2i: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauC2ixys(x: f64, y: f64, s: f64, rc2i: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauC2t00a(
        tta: f64,
        ttb: f64,
        uta: f64,
        utb: f64,
        xp: f64,
        yp: f64,
        rc2t: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauC2t00b(
        tta: f64,
        ttb: f64,
        uta: f64,
        utb: f64,
        xp: f64,
        yp: f64,
        rc2t: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauC2t06a(
        tta: f64,
        ttb: f64,
        uta: f64,
        utb: f64,
        xp: f64,
        yp: f64,
        rc2t: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauC2tcio(
        rc2i: *mut [f64; 3usize],
        era: f64,
        rpom: *mut [f64; 3usize],
        rc2t: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauC2teqx(
        rbpn: *mut [f64; 3usize],
        gst: f64,
        rpom: *mut [f64; 3usize],
        rc2t: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauC2tpe(
        tta: f64,
        ttb: f64,
        uta: f64,
        utb: f64,
        dpsi: f64,
        deps: f64,
        xp: f64,
        yp: f64,
        rc2t: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauC2txy(
        tta: f64,
        ttb: f64,
        uta: f64,
        utb: f64,
        x: f64,
        y: f64,
        xp: f64,
        yp: f64,
        rc2t: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauEo06a(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauEors(rnpb: *mut [f64; 3usize], s: f64) -> f64;
}
extern "C" {
    pub fn iauFw2m(gamb: f64, phib: f64, psi: f64, eps: f64, r: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauFw2xy(gamb: f64, phib: f64, psi: f64, eps: f64, x: *mut f64, y: *mut f64);
}
extern "C" {
    pub fn iauLtp(epj: f64, rp: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauLtpb(epj: f64, rpb: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauLtpecl(epj: f64, vec: *mut f64);
}
extern "C" {
    pub fn iauLtpequ(epj: f64, veq: *mut f64);
}
extern "C" {
    pub fn iauNum00a(date1: f64, date2: f64, rmatn: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauNum00b(date1: f64, date2: f64, rmatn: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauNum06a(date1: f64, date2: f64, rmatn: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauNumat(epsa: f64, dpsi: f64, deps: f64, rmatn: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauNut00a(date1: f64, date2: f64, dpsi: *mut f64, deps: *mut f64);
}
extern "C" {
    pub fn iauNut00b(date1: f64, date2: f64, dpsi: *mut f64, deps: *mut f64);
}
extern "C" {
    pub fn iauNut06a(date1: f64, date2: f64, dpsi: *mut f64, deps: *mut f64);
}
extern "C" {
    pub fn iauNut80(date1: f64, date2: f64, dpsi: *mut f64, deps: *mut f64);
}
extern "C" {
    pub fn iauNutm80(date1: f64, date2: f64, rmatn: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauObl06(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauObl80(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauP06e(
        date1: f64,
        date2: f64,
        eps0: *mut f64,
        psia: *mut f64,
        oma: *mut f64,
        bpa: *mut f64,
        bqa: *mut f64,
        pia: *mut f64,
        bpia: *mut f64,
        epsa: *mut f64,
        chia: *mut f64,
        za: *mut f64,
        zetaa: *mut f64,
        thetaa: *mut f64,
        pa: *mut f64,
        gam: *mut f64,
        phi: *mut f64,
        psi: *mut f64,
    );
}
extern "C" {
    pub fn iauPb06(date1: f64, date2: f64, bzeta: *mut f64, bz: *mut f64, btheta: *mut f64);
}
extern "C" {
    pub fn iauPfw06(
        date1: f64,
        date2: f64,
        gamb: *mut f64,
        phib: *mut f64,
        psib: *mut f64,
        epsa: *mut f64,
    );
}
extern "C" {
    pub fn iauPmat00(date1: f64, date2: f64, rbp: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPmat06(date1: f64, date2: f64, rbp: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPmat76(date1: f64, date2: f64, rmatp: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPn00(
        date1: f64,
        date2: f64,
        dpsi: f64,
        deps: f64,
        epsa: *mut f64,
        rb: *mut [f64; 3usize],
        rp: *mut [f64; 3usize],
        rbp: *mut [f64; 3usize],
        rn: *mut [f64; 3usize],
        rbpn: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauPn00a(
        date1: f64,
        date2: f64,
        dpsi: *mut f64,
        deps: *mut f64,
        epsa: *mut f64,
        rb: *mut [f64; 3usize],
        rp: *mut [f64; 3usize],
        rbp: *mut [f64; 3usize],
        rn: *mut [f64; 3usize],
        rbpn: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauPn00b(
        date1: f64,
        date2: f64,
        dpsi: *mut f64,
        deps: *mut f64,
        epsa: *mut f64,
        rb: *mut [f64; 3usize],
        rp: *mut [f64; 3usize],
        rbp: *mut [f64; 3usize],
        rn: *mut [f64; 3usize],
        rbpn: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauPn06(
        date1: f64,
        date2: f64,
        dpsi: f64,
        deps: f64,
        epsa: *mut f64,
        rb: *mut [f64; 3usize],
        rp: *mut [f64; 3usize],
        rbp: *mut [f64; 3usize],
        rn: *mut [f64; 3usize],
        rbpn: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauPn06a(
        date1: f64,
        date2: f64,
        dpsi: *mut f64,
        deps: *mut f64,
        epsa: *mut f64,
        rb: *mut [f64; 3usize],
        rp: *mut [f64; 3usize],
        rbp: *mut [f64; 3usize],
        rn: *mut [f64; 3usize],
        rbpn: *mut [f64; 3usize],
    );
}
extern "C" {
    pub fn iauPnm00a(date1: f64, date2: f64, rbpn: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPnm00b(date1: f64, date2: f64, rbpn: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPnm06a(date1: f64, date2: f64, rnpb: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPnm80(date1: f64, date2: f64, rmatpn: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPom00(xp: f64, yp: f64, sp: f64, rpom: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPr00(date1: f64, date2: f64, dpsipr: *mut f64, depspr: *mut f64);
}
extern "C" {
    pub fn iauPrec76(
        date01: f64,
        date02: f64,
        date11: f64,
        date12: f64,
        zeta: *mut f64,
        z: *mut f64,
        theta: *mut f64,
    );
}
extern "C" {
    pub fn iauS00(date1: f64, date2: f64, x: f64, y: f64) -> f64;
}
extern "C" {
    pub fn iauS00a(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauS00b(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauS06(date1: f64, date2: f64, x: f64, y: f64) -> f64;
}
extern "C" {
    pub fn iauS06a(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauSp00(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauXy06(date1: f64, date2: f64, x: *mut f64, y: *mut f64);
}
extern "C" {
    pub fn iauXys00a(date1: f64, date2: f64, x: *mut f64, y: *mut f64, s: *mut f64);
}
extern "C" {
    pub fn iauXys00b(date1: f64, date2: f64, x: *mut f64, y: *mut f64, s: *mut f64);
}
extern "C" {
    pub fn iauXys06a(date1: f64, date2: f64, x: *mut f64, y: *mut f64, s: *mut f64);
}
extern "C" {
    pub fn iauEe00(date1: f64, date2: f64, epsa: f64, dpsi: f64) -> f64;
}
extern "C" {
    pub fn iauEe00a(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauEe00b(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauEe06a(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauEect00(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauEqeq94(date1: f64, date2: f64) -> f64;
}
extern "C" {
    pub fn iauEra00(dj1: f64, dj2: f64) -> f64;
}
extern "C" {
    pub fn iauGmst00(uta: f64, utb: f64, tta: f64, ttb: f64) -> f64;
}
extern "C" {
    pub fn iauGmst06(uta: f64, utb: f64, tta: f64, ttb: f64) -> f64;
}
extern "C" {
    pub fn iauGmst82(dj1: f64, dj2: f64) -> f64;
}
extern "C" {
    pub fn iauGst00a(uta: f64, utb: f64, tta: f64, ttb: f64) -> f64;
}
extern "C" {
    pub fn iauGst00b(uta: f64, utb: f64) -> f64;
}
